# ubirch-board-crypto

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build-docker.sh  package-config.cmake.in
ubirch/crypto/: crypto.c  crypto.h
